--- a/less/frame1.less
+++ b/less/frame1.less
@@ -10,6 +10,9 @@
     color: white;
     font-weight: 300;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.35);
+    @media (max-width: 360px) {
+      color: #5c5c5c;
+    }
   }
 
   .sub-title-frame1{
@@ -21,6 +24,9 @@
     padding-bottom: 15px;
     position: relative;
     margin-bottom: 15px;
+    @media (max-width: 360px) {
+      color: #5c5c5c;
+    }
     &:after{
       height: 3px;
       width: 100px;
