--- a/less/main.less
+++ b/less/main.less
@@ -5,11 +5,17 @@
 @import "font.less";
 @import "countdown";
 @import "dialog";
+@import "footer";
 
-@import "footer.less";
+//Slick JS
+@import "slick";
+@import "slick-theme";
 
-@import "frame1.less";
+//Main style
+@import "frame1";
 @import "frame2";
-@import "frame3.less";
-@import "frame4.less";
+@import "frame3";
+@import "frame4";
+//Mobile style
+@import "mobile";
 
