--- a/less/countdown.less
+++ b/less/countdown.less
@@ -3,6 +3,10 @@
   position: fixed;
   bottom: 22px;
   z-index: 1;
+  @media (max-width: 768px) {
+    left: 10px;
+    bottom: 0;
+  }
   .title-countdown{
     display: block;
     width: 100%;
@@ -13,6 +17,9 @@
     position: relative;
     padding-bottom: 10px;
     margin-bottom: 10px;
+    @media (max-width: 768px) {
+      display: none;
+    }
     &:after{
       width: 100px;
       height: 3px;
@@ -27,7 +34,6 @@
   ul#countdown {
     position: relative;
     margin: 0 auto;
-    overflow: hidden;
     display: block;
     li {
       display: inline-block;
@@ -41,6 +47,9 @@
         position: relative;
         padding-right: 10px;
         line-height: 25px;
+        @media (max-width: 768px) {
+          font-size: 18px;
+        }
         &:after{
           content: ':';
           color: white;
@@ -49,6 +58,9 @@
           position: absolute;
           right: 0;
           top: 0;
+          @media (max-width: 768px) {
+            font-size: 18px;
+          }
         }
       }
       .label{
@@ -59,6 +71,11 @@
         left: 0;
         width: 100%;
         text-align: center;
+        @media (max-width: 768px) {
+          font-size: 8px;
+          bottom: 10px;
+          left: -5px;
+        }
       }
       &:last-child{
         .number {
