--- a/less/global.less
+++ b/less/global.less
@@ -15,11 +15,15 @@ html, html a {
 }
 
 body {
-  background-color: @bg-color;
+  background: @bg-color;
   color: @text-color;
   font-family: @base-font;
   font-size: 14px;
   overflow-x: hidden;
+  @media (max-width: 768px) {
+    background: url("../images/mobile/bg.png") no-repeat top left;
+    background-size: cover;
+  }
 }
 
 input, textarea, button, a {
@@ -56,9 +60,22 @@ p {
   left: 22px;
   position: fixed;
   top: 22px;
-  z-index: 1;
+  z-index: 99;
+  @media (max-width: 768px) {
+    top: 10px;
+    left: 10px;
+  }
   a {
+    background-position: center;
+    background-size: contain;
+    width: 175px;
+    height: 76px;
+    background-repeat: no-repeat;
     display: block;
+    @media (max-width: 768px) {
+      width: 75px;
+      height: 46px;
+    }
   }
 }
 
@@ -66,9 +83,13 @@ p {
   right: 22px;
   position: fixed;
   top: 22px;
-  z-index: 1;
+  z-index: 99;
+  @media (max-width: 768px) {
+    top: 10px;
+    right: 10px;
+  }
   a.btn-login {
-    display: block;
+    display: inline-block;
     .border-radius(6px);
     font-weight: 600;
     background-color: #00b1b7;
@@ -76,6 +97,10 @@ p {
     padding: 4px 15px;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
     .transition();
+    @media (max-width: 768px) {
+      top: 10px;
+      right: 10px;
+    }
     &:focus, &:hover {
       background-color: #00C8CE;
     }
