--- a/less/mobile.less
+++ b/less/mobile.less
@@ -290,9 +290,26 @@
       .transform(translate(0, 0));
       left: 0;
       top: 0;
-      text-align: center;
       width: 100%;
       height: 100%;
+      .btn-back {
+        position: relative;
+        width: 100%;
+        text-align: center;
+        margin-top: 5px;
+        span {
+          font-weight: 600;
+          font-size: 10px;
+          color: #404040;
+        }
+        i.icon-back {
+          background: url("../images/icon-back.png") no-repeat center center / contain;
+          width: 25px;
+          height: 15px;
+          position: absolute;
+          top: -15px;
+        }
+      }
       .step-mobile-1 {
         width: 100%;
         height: 100%;
@@ -387,6 +404,250 @@
             padding-bottom: 10px;
             position: relative;
             font-weight: 300;
+          }
+        }
+      }
+      .step-mobile-2 {
+        width: 100%;
+        height: 100%;
+        display: block;
+        position: relative;
+        background-image: url("../images/mobile/state3-mobile-step2.png");
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+        .question-block {
+          width: 100%;
+          height: auto;
+          display: block;
+          position: absolute;
+          left: 0;
+          bottom: 25px;
+          .question-title {
+            font-size: 15px;
+            color: #404040;
+            margin-bottom: 10px;
+            padding: 0 10px;
+            font-weight: 600;
+          }
+          .question-description {
+            font-size: 12px;
+            padding: 0 10px;
+            color: #404040;
+            font-weight: 300;
+            margin-bottom: 10px;
+          }
+          .wrapper-block {
+            width: 100%;
+            height: auto;
+            display: block;
+            padding: 0 10px;
+            .image-block {
+              text-align: center;
+              margin: 0 auto;
+            }
+            #question-data-mobile {
+              @DarkBrown: #484848;
+              @White: #fff;
+              div.radio {
+                margin: 0 0 0.75em 0;
+                input[type="radio"] {
+                  display: none;
+                  + label {
+                    color: @DarkBrown;
+                    font-family: Arial, sans-serif;
+                    font-size: 14px;
+                    span {
+                      display: inline-block;
+                      width: 19px;
+                      height: 19px;
+                      border: 1px solid @DarkBrown;
+                      margin: -1px 20px 0 0;
+                      vertical-align: middle;
+                      cursor: pointer;
+                      .rotate(45deg);
+                      position: relative;
+                      > i {
+                        text-align: center;
+                        .rotate(-45deg);
+                        display: block;
+                        vertical-align: middle;
+                        line-height: 15px;
+                        font-style: normal;
+                      }
+                    }
+                    span {
+                      background-color: @White;
+                      > i {
+                        color: @DarkBrown;
+                      }
+                    }
+                  }
+                  &:checked + label {
+                    font-weight: 600;
+                    span {
+                      background-color: @DarkBrown;
+                      > i {
+                        color: @White;
+                      }
+                    }
+                  }
+                }
+                input[type="radio"] + label span,
+                input[type="radio"]:checked + label span {
+                  -webkit-transition: background-color 0.4s linear;
+                  -o-transition: background-color 0.4s linear;
+                  -moz-transition: background-color 0.4s linear;
+                  transition: background-color 0.4s linear;
+                }
+              }
+              .form-group {
+                .btn-submit {
+                  width: 100%;
+                  height: 35px;
+                  text-align: center;
+                  vertical-align: middle;
+                  line-height: 30px;
+                  border: 1px solid #2c2c2c;
+                  background-color: transparent;
+                  font-weight: 600;
+                  color: #2c2c2c;
+                  .border-radius(2px);
+                  margin-top: 0;
+                  margin-bottom: 5px;
+                  .transition();
+                  &:hover {
+                    background-color: rgba(0, 0, 0, 0.1);
+                  }
+                }
+                .note-form {
+                  color: #2c2c2c;
+                  font-size: 12px;
+                  display: block;
+                }
+              }
+            }
+          }
+        }
+      }
+      .step-mobile-success {
+        width: 100%;
+        height: 100%;
+        display: block;
+        position: relative;
+        background-image: url("../images/mobile/state3-mobile-stepSuccess.png");
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+        .success-block {
+          width: 100%;
+          height: auto;
+          display: block;
+          position: absolute;
+          left: 0;
+          top: 15%;
+          .image-block{
+            text-align: center;
+          }
+          .reward-block{
+            width: 100%;
+            padding: 0 15px;
+            .reward-title {
+              font-size: 14px;
+              color: #404040;
+              margin-bottom: 5px;
+              font-weight: 700;
+              text-align: center;
+            }
+            .reward-description {
+              font-size: 12px;
+              color: #404040;
+              font-weight: 300;
+              margin-bottom: 10px;
+              a {
+                text-decoration: underline;
+              }
+            }
+          }
+
+          .reward-action {
+            display: inline-block;
+            width: 100%;
+            .btn-reward, .btn-lost {
+              padding: 6px 15px;
+              font-size: 12px;
+              font-weight: 600;
+              color: white;
+              display: inline-block;
+              background-color: #00b1b7;
+              .transition();
+              &.view-gallery {
+                margin-right: 10px;
+              }
+              &:hover {
+                background-color: hsl(182, 100%, 40%);
+              }
+            }
+          }
+        }
+      }
+      .step-mobile-lost {
+        width: 100%;
+        height: 100%;
+        display: block;
+        position: relative;
+        background-image: url("../images/mobile/state3-mobile-stepLost.png");
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+        .lost-main-block {
+          width: 100%;
+          height: auto;
+          display: block;
+          position: absolute;
+          left: 0;
+          top: 10%;
+          .image-block{
+            text-align: center;
+          }
+          .lost-block{
+            width: 100%;
+            padding: 0 15px;
+            .lost-title {
+              font-size: 12px;
+              color: #404040;
+              margin-bottom: 10px;
+              font-weight: 700;
+              text-align: center;
+            }
+            .lost-description {
+              font-size: 14px;
+              color: #404040;
+              font-weight: 300;
+              margin-bottom: 20px;
+              a {
+                text-decoration: underline;
+              }
+            }
+          }
+          .lost-action {
+            display: inline-block;
+            width: 100%;
+            .btn-reward, .btn-lost {
+              padding: 6px 15px;
+              font-size: 12px;
+              font-weight: 600;
+              color: white;
+              display: inline-block;
+              background-color: #00b1b7;
+              .transition();
+              &.view-gallery {
+                margin-right: 10px;
+              }
+              &:hover {
+                background-color: hsl(182, 100%, 40%);
+              }
+            }
           }
         }
       }
