--- a/less/dialog.less
+++ b/less/dialog.less
@@ -748,6 +748,119 @@
   }
 }
 
+#dialogGalleryMobile{
+  .dialog-content {
+    width: 100%;
+    max-width: 100%;
+    height: 100vh;
+    .gallery-background {
+      z-index: 101;
+      background-position: 50% 50%;
+      background-size: cover;
+      background-repeat: no-repeat;
+      height: 100vh;
+      .gallery-content {
+        height: 100vh;
+        width: 100%;
+        display: block;
+        position: relative;
+        .group-gallery {
+          position: absolute;
+          left: 50%;
+          top: 50%;
+          .transform(translate(-50%, 5%));
+          width: 95%;
+          color: white;
+          text-align: center;
+          padding-top: 30px;
+          i.icon-gallery {
+            background: url("../images/mobile/icon-collection-mobile.png") no-repeat center;
+            width: 16px;
+            height: 18px;
+            left: 50%;
+            margin-left: -13px;
+            top: 0;
+            position: absolute;
+            &:after {
+              content: '';
+              position: absolute;
+              width: 100px;
+              height: 1px;
+              background-color: white;
+              left: 45px;
+              top: 15px;
+            }
+            &:before {
+              content: '';
+              position: absolute;
+              width: 100px;
+              height: 1px;
+              background-color: white;
+              right: 45px;
+              top: 15px;
+            }
+          }
+          .title-gallery {
+            color: white;
+            font-size: 24px;
+            text-transform: uppercase;
+            font-weight: 300;
+            margin-top: 15px;
+          }
+          .total-gallery {
+            margin-top: 15px;
+            display: block;
+            padding: 10px 10px;
+            border-top: 1px solid #aaf0f3;
+            .title-total-gallery {
+              color: white;
+              font-size: 25px;
+              font-weight: 300;
+              margin-bottom: 15px;
+            }
+            .result {
+              width: 240px;
+              margin: 0 auto;
+              padding: 0 0 0 160px;
+              position: relative;
+              color: white;
+              font-size: 25px;
+              font-weight: 300;
+              span {
+                line-height: 75px;
+                font-weight: 300;
+                position: absolute;
+                color: white;
+                font-size: 60px;
+                left: 0;
+                top: 0;
+              }
+            }
+          }
+          .btn-gallery {
+            background-color: white;
+            color: #0091a6;
+            font-size: 14px;
+            text-transform: uppercase;
+            line-height: 30px;
+            height: 30px;
+            width: 120px;
+            text-align: center;
+            display: inline-block;
+            .transition();
+            &.close-dialog-gallery {
+              margin-left: 20px;
+            }
+            &:hover {
+              background-color: #dddddd;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
 #dialogRules, #dialogRules-mobile {
   .dialog-content {
     padding: 30px 50px;
