--- a/less/mobile.less
+++ b/less/mobile.less
@@ -292,7 +292,7 @@
       top: 0;
       width: 100%;
       height: 100%;
-      .btn-back {
+      .btn-back-mobile {
         position: relative;
         width: 100%;
         text-align: center;
